--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,15 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["inject.js"]
+      "js": ["listener.js"]
+    },
+    {
+      "matches": ["*://soundcloud.com/*"],
+      "js": ["soundcloud.js"]
     }
   ]
 }
+
+
+
+
